src/objects/Deleted_Time_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <label>Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <formula>IF(CONTAINS(TEXT(Employee__r.Job_Title__c), &apos;Installer&apos;),&apos;INSTALLER&apos;, IF(CONTAINS(TEXT(Employee__r.Job_Title__c), &apos;Electrician&apos;),&apos;ELECTRICIAN&apos;,&apos;OTHER&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Deleted Time Sheets</relationshipLabel>
        <relationshipName>Deleted_Time_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>For_The_Week_Starting__c</fullName>
        <label>For The Week Starting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weekly_Budget_Impact_Hours__c</fullName>
        <label>Weekly Budget Impact Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Holiday_Hours__c</fullName>
        <label>Weekly Holiday Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Hotel_Costs__c</fullName>
        <label>Weekly Hotel Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Hours_Worked__c</fullName>
        <label>Weekly Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Overtime_Hours_Percentage__c</fullName>
        <label>Weekly Overtime Hours Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weekly_Overtime_Hours__c</fullName>
        <label>Weekly Overtime Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Overtime_Pay__c</fullName>
        <label>Weekly Overtime Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Paid_Time_Off_Hours__c</fullName>
        <label>Weekly Paid Time Off Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Sick_Time_Hours__c</fullName>
        <label>Weekly Sick Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Standard_Hours__c</fullName>
        <label>Weekly Standard Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Standard_Pay__c</fullName>
        <label>Weekly Standard Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Total_Hours__c</fullName>
        <label>Weekly Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Total_Pay__c</fullName>
        <label>Weekly Total Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Vacation_Time_Hours__c</fullName>
        <label>Weekly Vacation Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Deleted Time Sheet</label>
    <nameField>
        <label>Deleted Time Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deleted Time Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>